# spell-leader

./: Cargo.toml  fluence.yaml
.fluence/: docker-compose.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
src/aqua/: main.aqua
src/compiled-aqua/: main.ts
src/modules/comp_function/: Cargo.toml  module.yaml
src/modules/comp_function/src/: main.rs
src/modules/curl_adapter.bk/src/: main.rs
src/modules/curl_effector/: curl_effector.wasm.bak  module.yaml
src/modules/leader_election/: Cargo.toml  module.yaml
src/modules/leader_election/src/: main.rs
src/services/http_demo/: service.yaml
src/services/http_demo/modules/comp_function/: module.yaml
src/services/http_demo/modules/comp_function/src/: main.rs
src/services/http_demo/modules/conversions/: Cargo.toml  module.yaml
src/services/http_demo/modules/conversions/src/: main.rs
src/services/http_demo/modules/curl_adapter/: module.yaml
src/services/http_demo/modules/curl_adapter.bk/: module.yaml
src/services/http_demo/modules/curl_adapter.bk/src/: main.rs
src/services/http_demo/modules/http_demo/: Cargo.toml  module.yaml
src/services/http_demo/modules/http_demo/src/: main.rs  main.rs.bak
src/spells/compExecutor/: spell copy.aqua  spell.aqua
