[package]
name = "http_demo"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "http_demo"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
#curl-effector-types = { git = "https://github.com/fluencelabs/effectors.git", branch = "crates_folex"}

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
